2004-01-27  Christophe Fergeau  <teuf@gnome.org>

	* libnautilus-private/nautilus-icon-container.c: compare 
	  a11y_item_action_idle_handler with 0, not NULL, fixes compilation

2004-01-27  Padraig O'Briain  <padraig.obriain@sun.com>

	* libnautilus-private/nautilus-icon-container.c: Implement AtkAction
	called "menu" for NautilusIconContainerAccessible. Fixes bug #132156.

2004-01-27  Padraig O'Briain  <padraig.obriain@sun.com>

	* libnautilus-private/nautilus-icon-canvas-item.c: Implement
	AtkAction in an idle handler to avoid causing the AT to hang if the
	action does not return until completed, e.g. displays a dialog.
	Use queue and idle handler defined in NautilusIconContainer.

	* libnautilus-private/nautilus-icon-container.c (finalize): Free
	accessibility action queue and remove idle handler.

	* libnautilus-private/nautilus-icon-private.h: Add 
	a11y_item_action_idle_handler and a11y_item_action_queue to
	NautilusIconContainerDetails.
	
	Fixes bug #132153.

2004-01-27  Jason Leach  <leach@wam.umd.edu>

	* cut-n-paste-code/libegg/egg-recent-item.c:
	* cut-n-paste-code/libegg/egg-recent-item.h:
	* cut-n-paste-code/libegg/egg-recent-model.c:
	* cut-n-paste-code/libegg/eggtreemultidnd.c:
	Sync these files with their latest copies from libegg so as to
	include any bugfixes since 2003-04-16, the previous sync.
	(#121455, Laurent Vivier)

2004-01-24  Srinivasa Ragavan  <sragavan@novell.com>

	* libnautilus-private/nautilus-program-choser.c:
	  (nautilus_program_chooser_show_no_choices_message):
	  Do not use object ('dialog') after destruction

	  (nautilus_program_chooser_show_invalid_message):
          Do not use object ('dialog') after destruction

2004-01-22  Christian Neumair  <chris@gnome-de.org>

	* libnautilus-private/nautilus-file-operations.c:
	(nautilus_file_operations_copy_move):
	Distinguish between copying and moving files to trash dialog-wise
	(#46784).

	* src/file-manager/fm-directory-view.c:
	(report_broken_symbolic_link):
	Fix typo (#129815).