@@ -1,3 +1,9 @@
+2004-01-28 Siviah Nallagatla <snallagatla@novell.com>
+                                                                                                                             
+        * src/file-manager/fm-directory-view.c :
+        (fm_direcotry_view_init) : add  callbacks for listening to show hidden
+        and backup files setting change. Fixes #131984
+
 2004-01-27  Christophe Fergeau  <teuf@gnome.org>
 
 	* libnautilus-private/nautilus-icon-container.c: compare 
